kubernetes/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system
  namespace: _{_NAMESPACE_}_
spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: solar-system
              port:
                number: 80
          path: /
          pathType: Prefix
